--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 MAIL_ADDRESS = xxxxx@xxxxx.com
 PASSWORD = xxxxxxxxxx
+
+# URL of MoneyForward used
+URL = https://ssnb.x.moneyforward.com/
+# URL = https://moneyforward.com/
