--- a/package.json
+++ b/package.json
@@ -1,16 +1,42 @@
 {
   "name": "moneyforward-collector",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "main.js",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "puppeteer": "^2.0.0"
-  },
-  "devDependencies": {},
+  "main": "dist/main.js",
+  "repository": "git@github.com:tomacheese/moneyforward-collector.git",
+  "author": "Tomachi",
+  "license": "MIT",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ts-node -r tsconfig-paths/register ./src/main.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register ./src/main.ts",
+    "start": "node ./dist/main.js",
+    "compile": "tsc -p .",
+    "compile:test": "tsc -p . --noEmit",
+    "lint": "run-p -c lint:prettier lint:eslint lint:tsc",
+    "lint:prettier": "prettier --check src",
+    "lint:eslint": "eslint . --ext ts,tsx",
+    "lint:tsc": "tsc",
+    "fix": "run-s fix:prettier fix:eslint",
+    "fix:eslint": "eslint . --ext ts,tsx --fix",
+    "fix:prettier": "prettier --write src"
   },
-  "author": "Tomachi (book000)",
-  "license": "MIT"
+  "devDependencies": {
+    "@types/node": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "5.30.3",
+    "@typescript-eslint/parser": "5.30.3",
+    "eslint": "8.18.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "15.2.3",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "6.0.0",
+    "prettier": "2.7.1",
+    "puppeteer-core": "^15.1.1",
+    "ts-node": "10.8.1",
+    "ts-node-dev": "2.0.0",
+    "typescript": "4.7.4",
+    "yarn-run-all": "3.1.1"
+  }
 }
