--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,9 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ github.event.repository.name }}:$(date +%s)
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag ${{ github.event.repository.name }}:$(date +%s)
 
-    - name: Build by Docker Compose
-      run: docker-compose build
+      - name: Build by Docker Compose
+        run: |
+          touch moneyforward-collector.env
+          docker-compose build
