feat: 常時起動処理に変更

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 services:
-  moneyforward-collector:
-    image: book000/moneyforward-collector:v2.3.0
+  app:
+    build: .
     volumes:
       - type: bind
         source: ./data
