--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "ts-node -r tsconfig-paths/register ./src/main.ts",
-    "dev": "ts-node-dev -r tsconfig-paths/register ./src/main.ts",
-    "start": "node ./dist/main.js",
+    "start": "ts-node -r tsconfig-paths/register ./src/main.ts",
+    "dev": "ts-node-dev --poll -r tsconfig-paths/register ./src/main.ts",
+    "package": "run-s clean compile packing",
+    "packing": "ncc build ./dist/main.js -o output/",
     "compile": "tsc -p .",
-    "compile:test": "tsc -p . --noEmit",
+    "clean": "rimraf dist output",
     "lint": "run-p -c lint:prettier lint:eslint lint:tsc",
     "lint:prettier": "prettier --check src",
     "lint:eslint": "eslint . --ext ts,tsx",
@@ -25,6 +26,7 @@
     "@types/node": "18.16.0",
     "@typescript-eslint/eslint-plugin": "5.59.0",
     "@typescript-eslint/parser": "5.59.0",
+    "@vercel/ncc": "0.36.1",
     "eslint": "8.38.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-standard": "17.0.0",
