feat: support eslint v9

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "moneyforward-collector",
   "version": "2.1.1",
   "description": "",
+  "license": "MIT",
+  "author": "Tomachi",
+  "private": true,
   "main": "dist/main.js",
   "repository": "git@github.com:tomacheese/moneyforward-collector.git",
-  "author": "Tomachi",
-  "license": "MIT",
-  "private": true,
   "scripts": {
     "start": "ts-node -r tsconfig-paths/register ./src/main.ts",
     "dev": "ts-node-dev --poll -r tsconfig-paths/register ./src/main.ts",
@@ -16,23 +16,20 @@
     "clean": "rimraf dist output",
     "lint": "run-p -c lint:prettier lint:eslint lint:tsc",
     "lint:prettier": "prettier --check src",
-    "lint:eslint": "eslint . --ext ts,tsx",
+    "lint:eslint": "eslint . -c eslint.config.mjs",
     "lint:tsc": "tsc",
     "fix": "run-s fix:prettier fix:eslint",
-    "fix:eslint": "eslint . --ext ts,tsx --fix",
+    "fix:eslint": "eslint . -c eslint.config.mjs --fix",
     "fix:prettier": "prettier --write src"
   },
   "devDependencies": {
+    "@book000/eslint-config": "1.2.3",
     "@types/node": "20.11.16",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
     "@vercel/ncc": "0.38.1",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "9.0.0",
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-n": "16.6.2",
-    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-n": "17.2.1",
     "eslint-plugin-promise": "6.1.1",
     "prettier": "2.8.8",
     "puppeteer-core": "21.11.0",
