--- a/package.json
+++ b/package.json
@@ -20,29 +20,26 @@
     "lint": "run-z lint:prettier,lint:eslint,lint:tsc",
     "fix": "run-z fix:prettier,fix:eslint",
     "lint:prettier": "prettier --check src",
-    "lint:eslint": "eslint . --ext ts,tsx",
+    "lint:eslint": "eslint . -c eslint.config.mjs",
     "lint:tsc": "tsc",
-    "fix:eslint": "eslint . --ext ts,tsx --fix",
+    "fix:eslint": "eslint . -c eslint.config.mjs --fix",
     "fix:prettier": "prettier --write src",
     "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
+    "@book000/eslint-config": "1.2.3",
     "@book000/node-utils": "1.12.127",
     "@types/node": "20.12.7",
-    "@typescript-eslint/eslint-plugin": "7.7.0",
-    "@typescript-eslint/parser": "7.7.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "9.0.0",
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-n": "17.2.1",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-unicorn": "52.0.0",
     "prettier": "3.2.5",
     "puppeteer-core": "22.6.5",
     "run-z": "2.0.0",
     "tsx": "4.7.2",
     "typescript": "5.4.5"
   },
-  "packageManager": "pnpm@9.0.3"
+  "packageManager": "pnpm@9.0.4"
 }
