--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,16 @@
 {
   "name": "moneyforward-collector",
   "image": "mcr.microsoft.com/devcontainers/typescript-node:1-18",
+  "remoteUser": "node",
   "otherPortsAttributes": {
     "onAutoForward": "silent"
   },
-  "postCreateCommand": "corepack enable",
-  "postStartCommand": "pnpm install",
+  "postCreateCommand": "sudo npm uninstall -g pnpm yarn && sudo git config --system --add safe.directory ${containerWorkspaceFolder} && sudo chown node node_modules .pnpm-store && sudo corepack enable && corepack install && pnpm install",
   "waitFor": "postCreateCommand",
+  "mounts": [
+    "source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume",
+    "source=pnpm-store,target=${containerWorkspaceFolder}/.pnpm-store,type=volume"
+  ],
   "customizations": {
     "settings": {
       "[typescript]": {
